# ocsf-gen

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/ocsf_gen/: __main__.py  app.py  defs.py  main.py  options.py  parser.py
src/ocsf_gen/models/: __init__.py  _util.py  attribute.py  categories.py  deprecated.py  dictionary.py  dictionary_attribute.py  event.py  extension.py  include.py  object.py  observable.py  profile.py  semver.py
tools/: metaschema-codegen.py
